# liesel-ptm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.qmd  interact_survival.ipynb  liesel-ptm.Rproj  setup.cfg
.github/workflows/: docs.yml  pre-commit.yml  pytest-pull.yml  pytest.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst
liesel_ptm/: __init__.py  __version__.py  bsplines.py  cache.py  custom_types.py  datagen.py  inverse_fn.py  nodes.py  optim.py  ptm_ls.py  sampling.py  survival.py  tam.py  util.py  var.py
liesel_ptm/liesel_internal/: splines.py
liesel_ptm/sim/: create_data.py  sim_bctm.py  sim_ptm.py  sim_run.py
tests/: test_bsplines.py  test_cache.py  test_datagen.py  test_inverse_fn.py  test_nodes.py  test_optim.py  test_ptm.py  test_sim.py  test_star.py  test_survival.py  test_tam.py  test_var.py
tests/liesel_internal/: test_spline.py
tests/resources/nonnormal_linear/: data.csv  knots.pickle  results.pickle  run.py
tests/resources/normal_linear/: results.pickle  run.py
tests/resources/normal_linear3/: data.csv  knots.pickle  results.pickle  run.py
tests/resources/normal_nonlinear/: data.csv  knots.pickle  results.pickle  run.py
tests/resources/normal_nonlinear_star/: knots.pickle  results.pickle  run.py
tests/resources/sim_dtm/: seed_1-results.pickle
