[metadata]
name = liesel_ptm
version = attr: liesel_ptm.__version__.__version__
description = A library for parametric transformation models with Liesel
long_description = file: README.md, CHANGELOG.md, LICENSE.md
url = https://github.com/liesel-devs/liesel-ptm
author = Johannes Brachem
keywords = statistics, machine-learning
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires =
    liesel>=0.2.7
    arviz
    scikit-learn
    dill
    scipy<=1.12

[isort]
profile = black
py_version = 311

[options.extras_require]
dev =
    build
    black
    flake8
    isort
    mypy
    pdoc
    pre-commit
    pytest
    pytest-cov
    pyupgrade
    plotnine
docs =
    sphinx>=7.2.6
    sphinx-autodoc-typehints>=2.0
    sphinx-book-theme>=1.1.0
    sphinx-copybutton>=0.5
    sphinx-remove-toctrees>=0.0.3
    myst-nb
[flake8]
# make flake8 compatible with black
per-file-ignores = __init__.py:F401
max-line-length = 90
extend-ignore = E203

[tool:pytest]
filterwarnings =
    ignore:.*`product` is deprecated:DeprecationWarning
    ignore:.*jax.core.Shape is deprecated:DeprecationWarning
    ignore:.*Accessing jax.config via the jax.config submodule is deprecated:DeprecationWarning

[coverage:run]
omit =
    liesel_ptm/sim/*
